--- a/style/levels.css
+++ b/style/levels.css
@@ -1,5 +1,31 @@
-main {
+
+.bgc-211 {
     background-color: rgb(211,211,211);
+}
+
+article#resultado, article#score {
+    min-width: 350px;
+    font-family: DMSans;
+}
+
+article#resultado {
+    font-size: 4em;
+}
+
+article#score {
+    font-size: 2.5em;
+    align-items: center;
+}
+
+p#score-value {
+    font-size: 1em;
+}
+
+article#score > h2 {
+    margin-right: 10px;
+}
+
+main {
     width: 100%;
     height: 100%;
 }
