--- a/style/levels.css
+++ b/style/levels.css
@@ -17,6 +17,18 @@ div.hard-panel {
     margin: 5px;
 }
 
+body {
+    position: relative;
+}
+
+header {
+    width: 80px;
+    height: 80px;
+    font-size: 50px;
+    top: 10%;
+    left: 50%;
+}
+
 article#resultado, article#score {
     min-width: 350px;
     font-family: DMSans;
