--- a/style/levels.css
+++ b/style/levels.css
@@ -25,8 +25,10 @@ header {
     width: 80px;
     height: 80px;
     font-size: 50px;
-    top: 10%;
-    left: 50%;
+    top: 45px;
+    left: 80px;
+    filter: blur(1px) drop-shadow(0px 0px 10px red);
+    user-select: none;
 }
 
 article#resultado, article#score {
@@ -42,6 +44,7 @@ article#score {
     font-size: 2.5em;
     align-items: flex-start;
     justify-content: center;
+    user-select: none;
 }
 
 p.score-values {
@@ -70,6 +73,7 @@ div {
     background-color: black;
     margin: 10px;
     border-radius: 5px;
+    cursor: pointer;
 
     opacity: 0;
     perspective: 500px;
