--- a/style/menu-responsive.css
+++ b/style/menu-responsive.css
@@ -2,10 +2,25 @@
     h1 {
         font-size: 3rem;
     }
+    h2 {
+        font-size: 1.5em;
+    }
+    p {
+        font-size: 1em;
+    }
 }
 
 @media (max-width: 400px) {
+    main > section {
+        width: 150px;
+    }
     h1 {
         font-size: 2rem;
+    }
+    h2 {
+        font-size: 1em;
+    }
+    p {
+        font-size: 0.8em;
     }
 }
