--- a/style/levels.css
+++ b/style/levels.css
@@ -27,7 +27,7 @@ header {
     font-size: 50px;
     top: 45px;
     left: 80px;
-    filter: blur(1px) drop-shadow(0px 0px 10px red);
+    filter: drop-shadow(0px 0px 10px red);
     user-select: none;
 }
 
@@ -38,6 +38,7 @@ article#resultado, article#score {
 
 article#resultado {
     font-size: 4em;
+    user-select: none;
 }
 
 article#score {
